# forgeAlka

./: .gitignore  README.md  pyproject.toml
.apex-apply-backups/20260613T214513Z/: README.md  pyproject.toml
.apex-apply-backups/20260613T214513Z/apps/web/: index.html  package-lock.json  package.json
.apex-apply-backups/20260613T214513Z/apps/web/src/: main.jsx
.apex-apply-backups/20260613T214513Z/docs/: conversion-suite.md  openrouter-tools.md  repo-overlay.md  web-app.md
.apex-apply-backups/20260613T214513Z/scripts/: codespaces_bootstrap.sh
.apex-apply-backups/20260613T214513Z/src/apexdev/: config.py  repo_overlay.py  web_api.py
.apex-apply-backups/20260613T214513Z/src/apexdev/analytics/: charts.py  lexical_metrics.py  output_trends.py
.apex-apply-backups/20260613T214513Z/src/apexdev/code_inspection/: snippet_extractor.py
.apex-apply-backups/20260613T214513Z/src/apexdev/conversations/: active_path.py  splitter.py
.apex-apply-backups/20260613T214513Z/src/apexdev/core/: loader.py
.apex-apply-backups/20260613T214513Z/src/apexdev/documents/: conversion.py  docx_tools.py  equation_docs.py  pandoc_tools.py  pdf_tools.py  slides_tools.py  tex_tools.py
.apex-apply-backups/20260613T214513Z/src/apexdev/indexes/: inverted.py  quote_anchors.py  schemas.py  spines.py  term_dictionary.py  traversal.py  windows.py
.apex-apply-backups/20260613T214513Z/src/apexdev/llm/: costs.py  preflight.py
.apex-apply-backups/20260613T214513Z/src/apexdev/llm_loops/: adapters.py  adversarial_delivery.py  simulators.py
.apex-apply-backups/20260613T214513Z/src/apexdev/media/: audio_chatter.py  flux_catalogs.py  prompt_dataset.py
.apex-apply-backups/20260613T214513Z/src/apexdev/noticing/: benchmark.py  engine.py  fragments.py  packets.py  state.py
.apex-apply-backups/20260613T214513Z/src/apexdev/preprocessing/: __init__.py  code_windows.py  normalization.py  pipeline.py
.apex-apply-backups/20260613T214513Z/src/apexdev/reference_assets/: __init__.py  noticing_engine_v2.py  validation.py
.apex-apply-backups/20260613T214513Z/src/apexdev/rules/: validators.py
.apex-apply-backups/20260613T214513Z/src/apexdev/search/: __init__.py  adapters.py  index.py  query.py
.apex-apply-backups/20260613T214513Z/tests/: test_noticing_analytics_docs.py  test_openrouter_tools.py  test_pass2_preprocessing_search.py  test_reference_assets_integration.py
apps/gensound/: gensound1.py  gensound4.py  gensound5.py  word_sayer1.py  word_sayer2.py
apps/scratch/: controller1.py  dataexp1.py  gensound2.py  gensound3.py  gensound6.py  mic_sweep.py  obcat.py  pysdl1.py  voicesetter.py  word_sayer3.py
apps/velocity/: CMakeLists.txt  compile.ps1  vcpkg.json
apps/velocity/src/: main.cpp
apps/web/: package-lock.json  package.json  vite.config.js
apps/web/src/: main.jsx  styles.css
docs/: bash-spellbook.md  cli-reference.md  conversion-suite.md  dev-workflows.md  git-and-ignore.md  openrouter-tools.md  repo-apply.md  repo-map.md  repo-overlay.md  troubleshooting.md  web-app.md
scripts/: codespaces_bootstrap.ps1  environmentvariablepathbullshit.ps1  serversetup.sh  ttsdownloadbullshit.ps1
scripts/models/whisper-tiny-en-ct2/: config.json
src/apexdev/: cli.py  system_tools.py
src/apexdev/analytics/: role_metrics.py  semantic_payload.py
src/apexdev/code_inspection/: code_signal_detector.py  task_classifier.py
src/apexdev/conversations/: export_loader.py  sentence_preprocessor.py
src/apexdev/core/: artifacts.py  models.py  normalizer.py
src/apexdev/documents/: markdown.py  markdown_tools.py  spreadsheet_tools.py  spreadsheets.py
src/apexdev/indexes/: correction_acceptance.py  postings.py  tokenizer.py
src/apexdev/knots/: generator.py
src/apexdev/llm/: __init__.py  costs.py  model_catalog.py  openrouter.py  preflight.py  rates.py
src/apexdev/llm_loops/: payload_graph.py
src/apexdev/media/: audio_tools.py  image_tools.py
src/apexdev/noticing/: config.py
src/apexdev/preprocessing/: dedupe.py
src/apexdev/rules/: blocked_affordance_assets.py  components.py  renderers.py  rule_engine.py  template_engine.py
src/apexdev/search/: tokenizer.py
src/apexdev/web/: conversations.py
tests/: test_conversion_suite.py  test_core_code_indexes.py  test_media_rules_knots_cli.py  test_openrouter_tools.py  test_repo_overlay.py  test_tex_generation_pass4.py  test_web_api.py
tests/fixtures/: sample_conversation.json
var/: emotions.md  oscillators.json
var/scripts/: script1.txt  script2.txt  script3.txt  script4.txt
