[project]
name = "apex-dev-tools"
version = "0.31.1"
description = "Apex dev-machine utilities: conversion, indexing, OpenRouter tools, and a Flask/React UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jinja2>=3.1.0"]

[project.optional-dependencies]
# --- CORE INFRASTRUCTURE, DB, & API LAYER ---
infra = [
    "elasticsearch>=8.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "SQLAlchemy>=2.0.0"
]

# --- SPECIFIC FILE FORMAT INTERFACES ---
formats = [
    "python-docx>=0.8.11",
    "python-pptx>=0.6.23",
    "pypdf>=4.0.0",
    "openpyxl>=3.1.0"
]

# --- TEXT PROCESSING & LINGUISTICS ---
text = [
    "tiktoken>=0.6.0",
    "regex>=2024.0.0",
    "charset-normalizer>=3.3.0",
    "markdown-it-py>=3.0.0",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "spacy>=3.8.14",
    "nltk>=3.9.4"
]

# --- MATH, SCIENCE, & RELATIONAL DATA ---
data = [
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "cryptography>=49.0.0",
    "sympy>=1.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24",
    "networkx>=3.6.1"
]

# --- MULTIMEDIA (AUDIO, VISUAL, SPEECH) ---
media = [
    "pillow>=10.0.0",
    "PyAudio>=0.2.14",
    "pydub>=0.25.1",
    "reportlab>=3.6.12",
    "matplotlib>=3.7.0",
    "PyQRCode>=1.2.1",
    "faster-whisper>=1.0.0",
    "vosk>=0.3.45",
    "piper-tts>=1.4.2",
    "kokoro-onnx>=0.5.0",
    "pyttsx3>=2.90",
    "soundfile>=0.12.1",
    "opencv-python>=5.0.0.93"
]

# --- UI, TESTING, & AUTOMATION ---
ui = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pytest>=7.0",
    "PyAutoGUI>=0.9.54",
    "jupyterlab>=4.6.1",
    "PySDL2>=0.9.17",
    "PyGame>=2.6.1",
    "pysdl2-dll>=2.32.10"
]

# --- ALL INCLUSIVE BUNDLE ---
all = [
    "elasticsearch>=8.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "SQLAlchemy>=2.0.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.23",
    "pypdf>=4.0.0",
    "openpyxl>=3.1.0",
    "tiktoken>=0.6.0",
    "regex>=2024.0.0",
    "charset-normalizer>=3.3.0",
    "markdown-it-py>=3.0.0",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "spacy>=3.8.14",
    "nltk>=3.9.4",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "cryptography>=49.0.0",
    "sympy>=1.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24",
    "networkx>=3.6.1",
    "pillow>=10.0.0",
    "PyAudio>=0.2.14",
    "pydub>=0.25.1",
    "reportlab>=3.6.12",
    "matplotlib>=3.7.0",
    "PyQRCode>=1.2.1",
    "faster-whisper>=1.0.0",
    "vosk>=0.3.45",
    "piper-tts>=1.4.2",
    "kokoro-onnx>=0.5.0",
    "pyttsx3>=2.90",
    "soundfile>=0.12.1",
    "opencv-python>=5.0.0.93",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pytest>=7.0",
    "PyAutoGUI>=0.9.54",
    "jupyterlab>=4.6.1",
    "PySDL2>=0.9.17",
    "PyGame>=2.6.1",
    "pysdl2-dll>=2.32.10"
]

[project.scripts]
apex = "apexdev.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["apexdev*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]